--- a/include/css/admin_toolbar.scss
+++ b/include/css/admin_toolbar.scss
@@ -7,7 +7,7 @@ body.gpAdmin #admincontent_panel.fixed {
 	right: 0;
 	min-height: 30px;
 	z-index: 9001;
-
+    border-bottom:1px solid gray;
 	&:hover{
 		z-index: 9003;
 	}
