--- a/themes/Bootstrap5.3_mult/4-green/style.scss
+++ b/themes/Bootstrap5.3_mult/4-green/style.scss
@@ -32,7 +32,7 @@ nav.nav-custom {
   color: dimgray;
 }
    
-@media only screen and ( min-width: 951px ) {
+@media only screen and ( min-width: 991px ) {
 nav.nav-custom {
    ul:not(.submenu) a{color:white;}
    ul.dropdown-menu a, ul.submenu a {color:dimgray;}
@@ -41,8 +41,9 @@ nav.nav-custom {
   color: white; }
 }
 
-@media only screen and ( max-width: 950px ) {
-ul.navbar-nav{min-width:250px;}
+@media only screen and ( max-width: 990px ) {
+ul.navbar-nav{min-width:250px;background-color:white;}
+div#offcanvasGp.offcanvas{background-color:#329932;}
 }
 
 .dropdown-item.active, .dropdown-item:active {
@@ -61,3 +62,17 @@ ul.navbar-nav{min-width:250px;}
 div.input-group span.input-group-btn:hover {
   background-color: lightgreen;
   }
+
+
+/*! --- common  footer-styles  in _common/footer.scss ----- */	
+$footer-bg: #090909;  /*! css - instead Standard */
+
+
+span.login_link:before{color:white;}
+span.sitemap_link a, span.login_link a{color:white;}
+
+footer.main-footer {
+  font-size: 0.875rem;
+  background: #090909;
+  color: white;
+}
