Upadet admin.scss
Pencil now 'on hover' - did  not appear mit some js-blockers

--- a/include/css/admin.scss
+++ b/include/css/admin.scss
@@ -1442,6 +1442,7 @@ html.admin_body #simplepanel .toolbar {
 
 #gp_edit_overlay span.gp_hover * {
 	display: block !important;
+	visibility: visible;
 }
 #gp_edit_overlay .gp_separator {
 	margin: 2px 0;
