--- a/themes/Cajon_Scss/sidemenu/variables.scss
+++ b/themes/Cajon_Scss/sidemenu/variables.scss
@@ -370,7 +370,7 @@ $popover-title-bg:                    darken($popover-bg, 3%);
 $popover-arrow-width:                 10px;
 $popover-arrow-color:                 $popover-bg;
 $popover-arrow-outer-width:           ($popover-arrow-width + 1);
-$popover-arrow-outer-color:           fadein($popover-border-color, 0.005);
+$popover-arrow-outer-color:           fade-in($popover-border-color, 0.005);
 $popover-arrow-outer-fallback-color:  darken($popover-fallback-border-color, 20%);
 
 
