Bootstrap 5.3multi-theme update
sticky-footer  and additional nav-classes now in pure js

--- a/themes/Bootstrap5.3_mult/_common/footer.scss
+++ b/themes/Bootstrap5.3_mult/_common/footer.scss
@@ -21,6 +21,7 @@ $footer-nav-link-active-bg:     transparent !default;
 
 
 footer.main-footer {
+  @extend .fixed-bottom; 
   font-size: $footer-font-size;
   background: $footer-bg;
   border-top: $footer-border-top;
